fix expand button in dark mode

--- a/public/stylesheets/dark.scss
+++ b/public/stylesheets/dark.scss
@@ -51,5 +51,5 @@ hr {
 }
 
 section.signatories .expand a {
-    border-top: 1px solid #ccc;
+    border-top: 1px solid #333;
 }
